--- a/static/less/webapp/plans.less
+++ b/static/less/webapp/plans.less
@@ -21,4 +21,25 @@
             }
         }
     }
+
+    table.plans-signup {
+        td, th {
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        thead {
+            tr:nth-child(2) td {
+                border: 0;
+            }
+
+            .period {
+                font-style: italic;
+            }
+            .price {
+                font-weight: bold;
+            }
+        }
+
+    }
 }
