--- a/static/less/webapp/plans.less
+++ b/static/less/webapp/plans.less
@@ -11,6 +11,11 @@
             }
         }
 
+        thead > tr > th:nth-child(1) {
+            border-top: 1px solid @white;
+            border-left: 1px solid @white;
+        }
+
         tbody {
             tr > td {
                 i.fa-check-circle-o {
@@ -18,6 +23,13 @@
                 }
                 i.fa-gear {
                 }
+            }
+        }
+
+        tfoot {
+            tr td:nth-child(1) {
+                border-left: 1px solid @white;
+                border-bottom: 1px solid @white;
             }
         }
     }
