--- a/templates/landing.html
+++ b/templates/landing.html
@@ -67,7 +67,7 @@
             <div class="panel-group container" id="features">
 
                 <div class="row">
-                    <a id="register-button" class="btn btn-lg btn-warning btn-custom" href="/register/">Experimente agora</a>
+                    <a id="register-button" class="btn btn-lg btn-warning btn-custom" href="{% url "register" %}">Experimente agora</a>
                 </div>
 
                 <div class="row">
