--- a/templates/webapp/transactions/month_balance_panel.html
+++ b/templates/webapp/transactions/month_balance_panel.html
@@ -30,6 +30,6 @@
             </div>
         </div>
 
-        <a href="/#/reports/balance" class="more">{% trans "See full report..." %}</a>
+        <a ui-sref="reports.balance" class="more">{% trans "See full report..." %}</a>
     </div>
 </div>
