--- a/templates/plans/plans-index.html
+++ b/templates/plans/plans-index.html
@@ -67,8 +67,8 @@
                         {% endblocktrans %}</p>
                     </td>
 
-                    <td class="plan-features"><i class="fa fa-gear fa-2x"></i></td>
-                    <td class="plan-features"><i class="fa fa-gear fa-2x"></i></td>
+                    <td class="plan-features"><i class="fa fa-wrench fa-2x"></i></td>
+                    <td class="plan-features"><i class="fa fa-wrench fa-2x"></i></td>
                 </tr>
                 <tr>
                     <td>
@@ -89,7 +89,7 @@
                         {% endblocktrans %}</p>
                     </td>
                     <td class="plan-features"></td>
-                    <td class="plan-features"><i class="fa fa-gear fa-2x"></i></td>
+                    <td class="plan-features"><i class="fa fa-wrench fa-2x"></i></td>
                 </tr>
                 </tbody>
 
