--- a/templates/webapp/transactions/transaction-list.html
+++ b/templates/webapp/transactions/transaction-list.html
@@ -87,6 +87,14 @@
                     <h4 class="panel-title">
                         <a ng-bind="group.name"></a>
 
+                        <div style="
+                            background-image: url('/static/img/sprites/foo.png');
+                            background-repeat: no-repeat;
+                            background-position-y: -180px;
+                            width: 20px; height: 20px;
+                            margin-left: 10px;
+                            display: inline-block">&nbsp;</div>
+
                         <span class="group-total pull-right" ng-bind="group.total | currency" is-positive-class="group.total"></span>
                     </h4>
                 </div>
