--- a/templates/plans/plans-index.html
+++ b/templates/plans/plans-index.html
@@ -59,6 +59,7 @@
                     <td class="plan-features"><i class="fa fa-check-circle-o fa-2x"></i></td>
                     <td class="plan-features"><i class="fa fa-check-circle-o fa-2x"></i></td>
                 </tr>
+                {% comment %}
                 <tr>
                     <td>
                         <h4>{% trans "Importação de dados" %}</h4>
@@ -70,6 +71,7 @@
                     <td class="plan-features"><i class="fa fa-wrench fa-2x"></i></td>
                     <td class="plan-features"><i class="fa fa-wrench fa-2x"></i></td>
                 </tr>
+                {% endcomment %}
                 <tr>
                     <td>
                         <h4>{% trans "Planejamento financeiro" %}</h4>
