changing subscription message when user has subscribed

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -20,7 +20,11 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li>
+                {% if user.has_subscription %}
+                <a class="navbar-link">{% trans "Plano Plus" %} <i class="fa fa-check"></i></a>
+                {% else %}
                 <a class="navbar-link" href="{% url "plans:index" %}">{% trans "Faça upgrade na sua conta!" %}</a>
+                {% endif %}
             </li>
             {% include "webapp/user-menu.html" %}
         </ul>
