--- a/static/less/forms.less
+++ b/static/less/forms.less
@@ -99,7 +99,7 @@ input.ng-invalid.ng-dirty {
     }
 }
 
-.transaction-form, .access-form {
+.transaction-form, .access-form, .contact-form {
     &.form-horizontal {
         div.form-group {
             .control-label {
