--- a/static/less/webapp/styles.less
+++ b/static/less/webapp/styles.less
@@ -228,3 +228,8 @@ img.img404, img.img500 {
 
     .center-block();
 }
+
+// making django work with bs classes
+.alert-error {
+    .alert-danger();
+}
