--- a/templates/404.html
+++ b/templates/404.html
@@ -4,6 +4,6 @@
 {% load staticfiles %}
 
 {% block body %}
-<h1 class="text-center">{% blocktrans %}Ops, o link que você buscava não foi encontrado!{% endblocktrans %}</h1>
+<h1 class="text-center">{% blocktrans %}Ops, a página que você buscava não foi encontrada!{% endblocktrans %}</h1>
 <img src="{% static "img/niqels-404.png" %}" class="img404" />
 {% endblock %}
