--- a/static/less/webapp/styles.less
+++ b/static/less/webapp/styles.less
@@ -16,6 +16,7 @@
 @import "transaction-list.less";
 @import "reports.less";
 @import "plans.less";
+@import "guide.less";
 
 @import "../components/option-panel.less";
 @import "../components/hashtags.less";
