--- a/templates/landing.html
+++ b/templates/landing.html
@@ -50,6 +50,7 @@
 
                 <div class="collapse navbar-collapse" id="navbar-links">
                     <ul class="nav navbar-nav navbar-right">
+                        <li><a href="{% url "guide:index" %}">{% trans "Guia" %}</a></li>
                         <li><a href="{% url "plans:index" %}">{% trans "Planos" %}</a></li>
                         <li><a href="{% url "contact" %}">{% trans "Contato" %}</a></li>
                         <li><a href="{% url "login" %}">{% trans "Login" %}</a></li>
