--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -19,6 +19,7 @@
             <li ng-class="{active: $state.includes('reports')}" id="reports-link"><a ui-sref="reports">{% trans "Relatórios" %}</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
+            {% comment %}
             <li>
                 {% if user.has_subscription %}
                 <a class="navbar-link">{% trans "Plano Plus" %} <i class="fa fa-check"></i></a>
@@ -26,6 +27,7 @@
                 <a class="navbar-link" href="{% url "plans:index" %}">{% trans "Faça upgrade na sua conta!" %}</a>
                 {% endif %}
             </li>
+            {% endcomment %}
             {% include "webapp/user-menu.html" %}
         </ul>
     </div>
