--- a/templates/plans/plans-index.html
+++ b/templates/plans/plans-index.html
@@ -8,10 +8,6 @@
 
     <div class="panel panel-default center-panel-large" id="plans">
         <div class="panel-body">
-            {% comment %}
-        {% include "plans/pagseguro-button.html" %}
-        {% endcomment %}
-
             <p class="lead">{% blocktrans %}
                 Assine agora o plano Plus por um preço promocional e tenha acesso ilimitado a todas as funcionalidades avançadas!
             {% endblocktrans %}</p>
@@ -95,6 +91,16 @@
                 </tr>
                 </tbody>
 
+                <tfoot>
+                <tr>
+                    <td></td>
+                    <td colspan="2" class="plan-features">
+                        <span class="text-danger lead">{% trans "Em breve!" %}</span>
+                    </td>
+                </tr>
+                </tfoot>
+
+                {% comment %}
                 {% if not user.is_authenticated %}
                     <tfoot>
                     <tr>
@@ -108,7 +114,10 @@
                     </tr>
                     </tfoot>
                 {% endif %}
+                {% endcomment %}
             </table>
+
+            {% comment %}
 
             {% if user.is_authenticated %}
                 <table class="table plans-signup">
@@ -149,6 +158,7 @@
                     </tbody>
                 </table>
             {% endif %}
+            {% endcomment %}
         </div>
     </div>
 
