--- a/static/less/landing/landing.less
+++ b/static/less/landing/landing.less
@@ -25,8 +25,11 @@ body {
     #navbar-links {
         a {
             text-decoration: none;
-            font-weight: bold;
-        }
+
+            &.important {
+                font-weight: bold;
+            }
+         }
     }
 }
 
