refactoring grunt, minifying css

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
         <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Roboto:900' rel='stylesheet' type='text/css'>
 
-        <link rel="stylesheet" type="text/css" href="{% static "css/styles.css" %}" />
+        <link rel="stylesheet" type="text/css" href="/static/css/styles.css?rel=123" />
         <link rel="icon" href="/static/landing/ico/favicon.ico">
 
         {% if is_debug %}
