--- a/templates/landing.html
+++ b/templates/landing.html
@@ -12,7 +12,7 @@
         <title>Niqels</title>
     
         <!-- Bootstrap core CSS -->
-        <link rel="stylesheet" type="text/css" href="{% static "css/landing.css" %}" />
+        <link rel="stylesheet" type="text/css" href="/static/css/landing.css?rel=1391213413034" />
         <!-- Custom styles for this template -->
 
         <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300' rel='stylesheet'>
