--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -5,13 +5,6 @@
 {% load humanize %}
 {% load i18n %}
 
-{% block extrahead %}
-
-    <link href="{% static "css/bootstrap-select.css" %}" rel="stylesheet" media="screen">
-
-{% endblock extrahead %}
-
-
 {% block webapp-menu %}
     <div class="collapse navbar-collapse" id="navbar-menu">
         <ul class="nav navbar-nav">
@@ -136,7 +129,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular-resource.min.js"></script>
         <script src="http://code.angularjs.org/1.2.3/angular-animate.min.js"></script>
 
-        <script src="{% static "js/webapp-script-48091131012014.js" %}"></script>
+        <script src="{% static "js/webapp-scripts.js?rel=1391213413034" %}"></script>
 
     {% endif %}
 
