--- a/static/less/webapp/styles.less
+++ b/static/less/webapp/styles.less
@@ -1,3 +1,9 @@
+@import "http://fonts.googleapis.com/css?family=Oxygen:400,300";
+@import "http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300";
+@import "http://fonts.googleapis.com/css?family=Roboto:900";
+
+@import "../../src/css/bootstrap-select.css";
+
 @import "../lib/bootstrap/bootstrap.less";
 //@import "../lib/typeahead.less";
 @import "../lib/datepicker3.less";
@@ -5,7 +11,6 @@
 @import "../datepicker-override.less";
 @import "../toastr-override.less";
 @import "../bootstrap-tour-override.less";
-
 
 @import "../variables.less";
 @import "category-list.less";
