--- a/static/src/css/landing.css
+++ b/static/src/css/landing.css
@@ -1,4 +1,11 @@
 
+@import "http://fonts.googleapis.com/css?family=Oxygen:400,300";
+
+@import "http://fonts.googleapis.com/css?family=Roboto:500";
+
+@import "http://fonts.googleapis.com/css?family=Roboto+Slab:700";
+
+@import "http://fonts.googleapis.com/css?family=Open+Sans:600,700";
 /*!
  * Bootstrap v3.0.0
  *
