--- a/static/src/css/styles.css
+++ b/static/src/css/styles.css
@@ -1,3 +1,10 @@
+@import "http://fonts.googleapis.com/css?family=Oxygen:400,300";
+
+@import "http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300";
+
+@import "http://fonts.googleapis.com/css?family=Roboto:900";
+
+@import "../../src/css/bootstrap-select.css";
 /*!
  * Bootstrap v3.0.0
  *
